# inevitable

./: .clang-format  .gitignore  CMakeLists.txt  CPU.cpp  CPU.hpp  IScheduler.hpp  InterruptController.cpp  InterruptController.hpp  Process.cpp  Process.hpp  README.md  main.cpp  rng.hpp  util.hpp
.github/workflows/: cmake-multi-platform.yml
algo/: FCFSScheduler.cpp  FCFSScheduler.hpp  PriorityScheduler.cpp  PriorityScheduler.hpp  RRScheduler.hpp  SJFScheduler.cpp  SJFScheduler.hpp  SRTFScheduler.cpp  SRTFScheduler.hpp
